--- a/themes/infinity-hugo/layouts/partials/hero-area.html
+++ b/themes/infinity-hugo/layouts/partials/hero-area.html
@@ -32,29 +32,28 @@
                                     <div class="dash days_dash">
                                         <div class="digit">0</div>
                                         <div class="digit">0</div>
-                                        <div class="digit">0</div>
-                                        <span class="dash_title">Days</span>
+                                        <span class="dash_title">Días</span>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="dash hours_dash">
                                         <div class="digit">0</div>
                                         <div class="digit">0</div>
-                                        <span class="dash_title">Hours</span>
+                                        <span class="dash_title">Horas</span>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="dash minutes_dash">
                                         <div class="digit">0</div>
                                         <div class="digit">0</div>
-                                        <span class="dash_title">Minutes</span>
+                                        <span class="dash_title">Minutos</span>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="dash seconds_dash">
                                         <div class="digit">0</div>
                                         <div class="digit">0</div>
-                                        <span class="dash_title">Seconds</span>
+                                        <span class="dash_title">Segundos</span>
                                     </div>
                                 </li>
                             </ul>
