added external link to board catalog

--- a/themes/infinity-hugo/layouts/partials/navigation.html
+++ b/themes/infinity-hugo/layouts/partials/navigation.html
@@ -31,9 +31,9 @@
                 {{ end }}
                 {{ if .Site.Params.contact.enable }}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ .Site.BaseURL }}#contact">
+                        <a class="nav-link" href="http://www.surfprescriptions.com/boards.html">
                             {{ with .Site.Params.navigation.contact }} {{ . }} {{ end }}
-                             {{ with .Site.Params.navigation.home }} {{ . }} {{ end }}
+                           
                     </a>
                 </li>
                 {{ end }}
