--- a/themes/infinity-hugo/layouts/index.html
+++ b/themes/infinity-hugo/layouts/index.html
@@ -1,3 +1,4 @@
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133737027-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -6,6 +7,7 @@
 
   gtag('config', 'UA-133737027-1');
 </script>
+
 
 
 {{ partial "header.html" . }}
